--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,7 +11,7 @@
 body {
     background-color: black;
     color: #fff;
-    font-family: 'HelveticaNeue-UltraLight', 'Open Sans', sans-serif;
+    font-family: 'Helvetica Neue', 'Open Sans', sans-serif;
     font-weight: 300;
     position: relative;
 }
