--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,9 +12,9 @@
 	<div class="middle-center">
 		<div id="speech"></div>
 	</div>
-	<div class="bottom-left">
+	<div class="bottom-left"></div>
+	<div class="bottom-right"></div>
+	<div class="bottom-center">
 		<div id="news"></div>
 	</div>
-	<div class="bottom-right"></div>
-	<div class="bottom-center"></div>
 </div>
