--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,7 +11,7 @@
 body {
     background-color: black;
     color: #fff;
-    font-family: 'HelveticaNeue-UltraLight', 'Open Sans', sans-serif;
+    font-family: /*'HelveticaNeue-UltraLight',*/ 'Open Sans', sans-serif;
     font-weight: 300;
     position: relative;
 }
@@ -77,7 +77,7 @@ dt {
 }
 
 .partial-result {
-    font-family: 'Open Sans', sans-serif;
+    /*font-family: 'Helvetica Neue', 'Open Sans', sans-serif;*/
 }
 
 .top-left {
@@ -108,14 +108,14 @@ dt {
 }
 
 .bottom-center {
-    font-family: 'Open Sans', sans-serif;
+    /*font-family: 'Helvetica Neue', 'Open Sans', sans-serif;*/
     width: 100%;
     text-align: center;
     margin-bottom: 20px;
 }
 
 .bottom-left, .bottom-right {
-    font-family: 'Open Sans', sans-serif;
+    /*font-family: 'Helvetica Neue', 'Open Sans', sans-serif;*/
     position: absolute;
     bottom: 50px;
     width: 50%;
@@ -158,7 +158,7 @@ ul.calendar {
   font-size: 25px;
   max-width: 400px;
   float: left;
-  font-family: 'Helvetica Neue';
+  /*font-family: 'Helvetica Neue';*/
 }
 
 .calendar .event-details {
@@ -168,7 +168,7 @@ ul.calendar {
 
 .calendar .event-details .details {
     font-size: 12px;
-    font-family: 'HelveticaNeue-UltraLight', sans-serif;
+    /*font-family: 'HelveticaNeue-UltraLight', sans-serif;*/
     font-weight: lighter;
     float: left;
     margin: 8px 0 0 20px;
@@ -209,11 +209,13 @@ ul.calendar {
 }
 
 .weather-week-descriptor {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 12px;
+    /*font-family: 'Helvetica Neue', 'Open Sans', sans-serif;*/
+    font-size: 14px;
     margin-left: auto;
     margin-bottom: 10px;
     text-align: justify;
+    letter-spacing: 1px;
+    line-height: 22px;
 }
 
 .weather-week {
@@ -395,7 +397,7 @@ ul.calendar {
     margin: auto;
     -webkit-filter: grayscale(70%);
     filter: grayscale(70%);
-    font-family: bold;
+    /*font-family: bold;*/
 }
 
 .scWaveform {
@@ -455,7 +457,7 @@ ul.calendar {
 .xxsmall,
 .xsmall,
 .small {
-    font-family: "HelveticaNeue-Medium", sans-serif;
+    /*font-family: "HelveticaNeue-Medium", sans-serif;*/
     letter-spacing: 0;
 }
 
@@ -517,8 +519,8 @@ ul.calendar {
 }
 
 .news-title {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 12px;
+    /*font-family: 'Helvetica Neue', 'Open Sans', sans-serif;*/
+    font-size: 16px;
     margin-bottom: 5px;
     width: 100%;
 }
@@ -526,7 +528,7 @@ ul.calendar {
 
 
 .news-content {
-    font-family: 'Open Sans', sans-serif;
+    /*font-family: 'Helvetica Neue', 'Open Sans', sans-serif;*/
     font-size: 20px;
     margin-bottom: 55px;
 }
