--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,20 +1,1 @@
-<div class="top">
-	<div class="top-left">
-		<div id="clock"></div>
-		<div id="calendar"></div>
-	</div>
-	<div class="top-right">
-		<div id="weather"></div>
-	</div>
-</div>
-
-<div class="container">
-	<div class="middle-center">
-		<div id="speech"></div>
-	</div>
-	<div class="bottom-left"></div>
-	<div class="bottom-right"></div>
-	<div class="bottom-center">
-		<div id="news"></div>
-	</div>
-</div>
+<div id="app"></div>
