--- a/public/css/main.css
+++ b/public/css/main.css
@@ -549,3 +549,16 @@ ul.calendar {
 .half-transparent {
     background: rgba(0,0,0,0.9);
 }
+
+
+
+.mvg {
+    margin-left: 10px;
+    font-size: 20px;
+}
+.mvg th {
+    text-align: left;
+}
+.mvg td {
+    padding: 5px 20px 0 0;
+}
